--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,24 @@ dependencies:
   flutter_native_splash: ^2.4.2
   # 国际化
   intl: 0.19.0
+  # 网络请求
+  dio: ^5.7.0
+  # 状态管理
+  get: ^4.6.6
+  # 本地存储
+  shared_preferences: ^2.3.3
+  # 验证码输入框
+  pinput: ^5.0.0
+  # 幻灯片
+  carousel_slider: ^5.0.0
+  # 官方推荐路由
+  go_router: ^14.6.0
+  # 猫哥的UI组件库
+  ducafe_ui_core: ^1.0.4
+  # 表单验证
+  validatorless: ^1.2.3
+  # 日志 - 美化打印
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
