--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   flutter_svg: ^2.0.14
   # 图片缓存
   cached_network_image: ^3.4.1
+  # 加载动画
+  flutter_easyloading: ^3.0.5
+  # 加密
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
