--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   # 加密
   encrypt: ^5.0.3
+  package_info_plus: ^8.1.1
 
 dev_dependencies:
   flutter_test:
