添加个人信息编辑页，头像的基本逻辑

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,17 @@ dependencies:
   flutter_easyloading: ^3.0.5
   # 加密
   encrypt: ^5.0.3
+  # 读取 包信息
   package_info_plus: ^8.1.1
   uuid: ^4.5.1
+  # 微信图片选择器
+  wechat_assets_picker: ^9.4.0
+  # 微信相机
+  wechat_camera_picker: ^4.3.4
+  # 权限
+  permission_handler: ^11.3.1
+  # 设备信息
+  device_info_plus: ^11.1.1
 
 dev_dependencies:
   flutter_test:
