--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>NSCameraUsageDescription</key>
+		<string>Request access to the album feature.</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>Request access to the microphone function.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>We need Photos access to allow you to update Profile Picture.</string>
 		<key>CFBundleDevelopmentRegion</key>
